--- a/AuthECAPI/appsettings.json
+++ b/AuthECAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevDB": "Server=(local)\\sqlexpress;Database=AuthEDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
