--- a/AuthECAPI/appsettings.json
+++ b/AuthECAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevDB": "Server=(local)\\sqlexpress;Database=AuthEDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevDB": "Server=DESKTOP-UL040V0;Database=AuthEDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
