added nugget package for jwt tokens, configured authentication in program.cs

--- a/AuthECAPI/appsettings.json
+++ b/AuthECAPI/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevDB": "Server=DESKTOP-UL040V0;Database=AuthEDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  }
+  },
+  "appSettings": {
+    "JWTSecret": "ThisisasecretkeyusedforJWTtokengeneration",
 }
